--- a/css/education.css
+++ b/css/education.css
@@ -1,22 +1,85 @@
+
+.custom-container{
+    width: 1349px!important;
+}
+.custom-row{
+    display: flex;
+}
+
 body{
     font-family: AvenirNext!important;
     overflow-x: hidden;
 }
 /************************************************* header section start  ***********************************************/
-#hero {
+.hero-img{
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
     background-size: 100%;
-    height: 815px}
+    height: 815px;}
 
 .hero-row-1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around; }
-
+@font-face {
+    font-family: AvenirNext;
+    src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 
 /*menu start*/
-/*-----------------------------------------------------------------------------------------------------*/
+/*.custom-container{*/
+    /*width:1300px!important;*/
+    /*margin: 0 auto;*/
+/*}*/
+.header-area{
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-top:41px !important;
+}
+.hero-img .logo-container{
+    padding:0px;
+    margin:0px;
+
+}
+.hero-img .logo-one{
+    padding-left:39px;
+    padding-top: 2px;
+}
+.hero-img .logo-one ul{
+    list-style-type: none;
+    padding-left:4px;
+    padding-top:40px;
+    padding-bottom:95px;
+}
+.hero-img .logo-one li a{
+    text-decoration: none;
+    opacity: 0.9;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2.15;
+    letter-spacing: 0.8px;
+    text-align: left;
+    color: #ffffff;
+    font-family: AvenirNext;
+}
+.hero-img .text-container{
+    padding:0px;
+}
+.hero-img .text-container h4{
+    opacity: 0.6;
+    font-family: AvenirNext;
+    font-size: 43px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 0.8;
+    letter-spacing: 45px;
+    color: #ffffff;
+    text-align: right;
+    margin-right: -26px;
+}
+
 
 .menumain .caption-icons-1 {
     position: absolute;
@@ -75,73 +138,8 @@ body{
     right: 30px;
     z-index: 1;
 }
-/*----------------------------------------------------------------------------------------------------------------*/
-/*Menu end*/
-.main-container{
-    width:1287px;
-    margin:auto;
-}
-@font-face {
-    font-family: AvenirNext;
-    src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
-.container-1{
-    display:flex;
-    justify-content: space-between;
-    padding-top:45px;
-}
-.container-1:nth-child(1){
-    padding-left: 39px;
-}
-.headerlogo img{
-    width: 135px;
-    height: 56px;
-
-}
-.welcome-logo{
-    height: 72px;
-    opacity: 0.6;
-    font-size: 41px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 0.8;
-    letter-spacing: 43px;
-    text-align: left;
-    color: #ffffff;
-    margin-top: 8px;
-    font-family: AvenirNext;
-    padding-left: 45px;
-}
-/*   wellcome  & logo */
-.container-2{
-    display:flex;
-    justify-content: space-between;
-    padding-bottom: 95px;
-}
-.left-list-top{
-    padding-left: 41px;
-    padding-top: 40px;
-}
-
-.left-list-top a{
-    opacity: 0.9;
-    font-size: 16px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 2.15;
-    letter-spacing: 0.8px;
-    text-align: left;
-    color: #ffffff;
-    font-family: AvenirNext;
-}
-.left-list-top a:hover{
-    color: #ffffff;
-    cursor: pointer;
-    text-decoration:none;
-}
-.text-center{
+.text-center {
     width: 61.4px;
     opacity: 0.6;
     border-radius: 6px;
@@ -150,73 +148,73 @@ body{
     padding-bottom: 15px;
     margin-top: 16px;
     margin-right: -3px;
-
 }
-.icons{
-    padding-top: 5px;
-}
-
-.magnifier a img{
+.magnifier a img {
     width: 21px;
     height: 22px;
     margin: 7px auto;
 }
-.person a img{
+.person a img {
     width: 21px;
     height: 22px;
     margin: 6px auto 6px 1px;
 }
-.chaticon a img{
+.chaticon a img {
     width: 33px;
     height: 25px;
     margin: 17px auto 7px auto;
 }
-.telephone a img{
+.telephone a img {
     width: 23px;
     height: 22px;
     margin: 7px auto;
 }
-.globe a img{
+.globe a img {
     width: 27px;
     height: 24px;
     margin: 7px auto 7px 2px;
 }
-.icons > div a img:nth-child(2){
-    width: 21px;
-    height: 22px;
+.logo-header-div{
+    height: 215px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
 }
-.container-computer{
-    position: relative;
-    margin-top: 94px;
+/****************************** computer div ****************************/
+.hero-img .computer-div{
+    padding-right: 0px;
+    padding-left: 0px;
+    width: 1300px;
+    margin-top: 41px;
 }
-.computer-area{
+
+.hero-img .computer-img{
     width: 254px;
     border-bottom: 1px solid #fff;
-    position:relative;
-    left:-30px;
-
-
+    position: relative;
+    left: -30px;
+    margin-top:57px;
+    top: -3px;
 }
-.computer-area img{
-    padding-left: 42px;
-    width: 220px;
+.hero-img .computer-img img{
+    padding-left: 49px;
+    width: 224px;
     height: 90px;
+}
+.hero-img  .list-home{
+    padding-left: 35px;
+    padding-top: 6px;
+}
 
+.hero-img .computer-div ul{
+    list-style-type: none;
+    padding-left:28px;
 }
-/* container 3 */
-.container-3{
-    display:flex;
-    justify-content: space-between;
-    padding-top: 49px;
-
-}
-.container-3 .secondnav1{
-    padding-left:42px;
-}
-.container-3 .secondnav1 a{
+.hero-img .computer-div li a{
+    text-decoration: none;
     opacity: 0.9;
     font-size: 16px;
-    font-family:  AvenirNext;
+    font-family: AvenirNext;
     font-weight: 500;
     font-style: normal;
     font-stretch: normal;
@@ -225,19 +223,40 @@ body{
     text-align: left;
     color: #9d9d9d;
 }
-.container-3 .secondnav1 a:hover{
-    text-decoration: none;
+.hero-img .computer-div li a:hover{
     color:#ffffff;
 }
-.secondnav1 .active .white-color{
+.hero-img .computer-div .color{
     color:#ffffff;
 }
-
+.play-logo {
+    display: flex;
+    flex-direction: row-reverse;
+    opacity: 0.9;
+    mix-blend-mode: color-dodge;
+    font-family: AvenirNext;
+    font-size: 18px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 2;
+    letter-spacing: 0.1px;
+    color: #fc0606;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding: 0 6px 18px 23px;
+}
+.play-logo p{
+    margin-right: 12px;
+    font-size: 16px;
+    margin-bottom: 2px;
+    letter-spacing: 0.5px;
+}
 .arrow-img {
     width: 118px;
     height: 118px;
     border-radius: 50%;
-    border: 4px solid #fff;
+    border: 4px solid red;
     align-self: flex-end;
     display: flex;
     align-items: center;
@@ -249,26 +268,13 @@ body{
     height: 63px;
     padding-left: 6px;
 }
-.secondnav2{
+
+.logo-header-div .txt{
     font-family: AvenirNext;
     color: #9d9d9d;
     padding-top: 7px;
-}
-.secondnav2 p{
-    padding-right: 32px;
-}
-.logo {
-    opacity: 0.6;
-    font-family: AvenirNext;
-    font-size: 43px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 0.8;
-    letter-spacing: 41px;
-    color: #ffffff;
-    padding-top: 8px;
-    margin-right: -7px;
+    text-align: right;
+    padding-right:87px;
 }
 
 
@@ -615,7 +621,9 @@ body{
 /******************************** slider2 start *****************/
 .slider2{
     margin: 0 auto;
-    background-color: #f7f7f7;
+    background-color: #54585a;
+    height: 270px;
+    margin-bottom: 397px;
    
 }
 .blog1-area{
@@ -817,7 +825,7 @@ body{
   background-color: #f7f7f7;
 }
 .image-section{
-    width: 1260px;
+    width: 1260px!important;
     height: 670px;
     margin: 0 auto;
      background-blend-mode: normal, multiply, soft-light, multiply;
@@ -843,15 +851,16 @@ body{
     letter-spacing: normal;
     text-align: center;
     color: #ffffff;
+    margin-top: 128px;
 }
 .schedule-demo-content .mid-schdeule-content{
-    height: 374px;
+    height: 493px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 260px;
-    padding-left: 33px;
+
+    padding-left: 0px;
 }
 .schedule-demo-content .mid-schdeule-content h1{
     opacity: 0.9;
@@ -885,7 +894,7 @@ body{
     flex-direction: row;
     justify-content: flex-end;
     align-items: flex-start;
-    margin-top: 125px;
+
 }
 .schedule-demo-content .learn-more .content-div{
     display: flex;
@@ -931,56 +940,64 @@ body{
     padding-top: 2px;
 }
 
+/*****************************  footer   & subscribtion area **********************************/
 
-/******************************** footer start *****************/
+/*subscribe section*/
+.subscribe-section{
 
-/* subsribe start */
-
-.subscribe-container{
-    margin:0 auto;
     background-color: #f7f7f7;
-}
-.main{
-    background-color: #f7f7f7;
-}
-.subscribing-area{
-    display: flex;
-    justify-content: flex-end;
-    height: 650px;
-    width: 1349px;
-    background-color: #f7f7f7;
-    margin:0 auto;
+    padding-bottom: 81px;
+    margin:0 auto
 
 }
-.sub{
-
-    width: 1215px;
-    height: 409px;
-    background-color: rgba(155, 155, 155, 0.06);
-    margin-top: 159px;
-    margin-bottom: 81px
+.subscribe-section .subcribe-text {
+    padding-left: 42px!important;
+    padding-top: 51px;
 }
-/* subscribe */
 
-.Subscribe {
+.subscribe-section .subcribe-text p{
     font-family: AvenirNext;
-    font-size: 32px;
-    font-weight: 600;
+    font-size: 34px;
+    font-weight: 500;
     font-style: normal;
     font-stretch: normal;
     line-height: 1.21;
-    letter-spacing: -0.2px;
+    letter-spacing: -0.4px;
     text-align: left;
     color: #5a6775;
-    padding-top: 51px;
-    padding-left: 40px;
 }
+.subscribe-section .flexing-spans{
+    display: flex;
+    justify-content: space-between;
+}
+.subscribe-section .flexing-spans hr{
 
-.Subscribe1 span{
-    width: 39px;
-    height: 21px;
+
+}
+.subscribe-section .long-paragraph-p p{
     font-family: AvenirNext;
-    font-size: 15px;
+    font-size: 13px;
+    font-weight: normal;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.38;
+    letter-spacing: normal;
+    text-align: left;
+    color: #5a6775;
+}
+.subscribe-section .long-paragraph-p p:last-child{
+    padding-top: 17px;
+}
+.subscribe-section .hr-line hr{
+    margin: 9px;
+    margin-bottom: 28px!important;
+    margin-right: 11px;
+    margin-top: 12px!important;
+    border-top: 1px solid #000000;
+}
+.subscribe-section .flexing-spans span{
+    font-family: AvenirNext;
+    font-size: 16px;
     font-weight: normal;
     font-style: normal;
     font-stretch: normal;
@@ -988,86 +1005,55 @@ body{
     letter-spacing: 0.2px;
     text-align: left;
     color: #5a6775;
-    padding-left: 8px;
+    padding-left: 10px;
+    padding-right: 7px;
 }
-.Subscribe1 .float-right{
-    width: 68px;
-    height: 22px;
-    font-family: AvenirNext;
-    font-size: 15px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.29;
-    letter-spacing: 0.1px;
-    text-align: left;
-    color: #5a6775;
+.subscribe-section .position-end{
+    display: flex;
+    justify-content: flex-end;
+    width: 1334px;
+    background-color: #f7f7f7;
 }
-.Subscribe1 p{
-    display: block;
-    font-family: AvenirNext;
-    font-size: 12px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.58;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775;
-    padding-bottom: 20px;
-    padding-top: 16px;
+.subscribe-section .row{
+    margin-right: 0px!important;
+    margin-left: 0px!important;
 }
 
-.second-subscribe {
-    width: 600px;
-    float: right;
-    padding-right: 146px;
-    padding-top: 4px;
-
-
+.subscribe-section .section-left{
+    width: 1251px;
+    background-color: rgba(155, 155, 155, 0.06);
+    height: 430px;
+    margin-top: 107px;
 }
-.second-subscribe hr{
-    border: solid 1px #d1d1d6;
-    margin-top: 6px;
-}
+/*subcribe section*/
 
-/* subsribe end */
+
+
+/******************************** footer start *****************/
+
+
 /* footer area star */
 
-.footer-container{
+
+.foot-area{
 
     background-color: rgb(239, 238, 238);
-
+    margin: 0px auto 0 auto;
 }
-.foot-area{
-    width: 1349px;
-    background-color:rgb(239, 238, 238);
-    margin:0 auto;
+.main-container{
+    padding: 40px 100px;
 }
 .footer-area{
     display: flex;
     flex-direction: row;
-    width: 1200px;
+    flex-flow: wrap;
+    width: 1143px;
     height: auto;
     padding-right: 50px;
     margin:0 auto;
     padding-bottom: 45px;
 }
-.footer-area .list1{
-    padding: 36px 0px 0 144px;
-}
-.footer-area .list2{
-    padding: 36px 0px 0 24px;
-}
-.footer-area .list3{
-    padding: 36px 0px 0 50px;
-}
-.footer-area .list4{
-    padding: 36px 0px 0 28px;
-}
-.footer-area .list5{
-    padding: 31px 0px 0 21px;
-}
+
 .redcolor p{
     font-weight: 600;
     font-size: 12px;
@@ -1091,8 +1077,9 @@ body{
 
 
 .footer-menu {
-    width: 150px;
-    height: 224px;
+
+}
+.footer-menu p{
     font-family: AvenirNext;
     font-size: 12px;
     font-weight: normal;
@@ -1102,10 +1089,6 @@ body{
     letter-spacing: normal;
     text-align: left;
     color: #5a6775;
-}
-.footer-menu p{
-    font-family: AvenirNext;
-    font-size: 12px;
     margin-bottom: 2px;
 }
 
@@ -1163,12 +1146,87 @@ body{
     padding: 0 20px;
 }
 .socialicons {
-    font-size: 25px;
+    font-size: 22px;
     margin-left: 20px;
     color: #fc0606;
 }
 .socialicon1 {
-    font-size: 25px;
+    font-size: 22px;
     color: #fc0606;
 }
+.icon-list{
+    margin-right: 20px;
+}
 /* footer area end */
+
+@media only screen and (max-width: 640px){
+    .footer-area{
+        padding: 40px;
+    }
+    .foot-area{
+        height: auto;
+    }
+    .footer-area{
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .footer-area .list1{
+    }
+    .footer-paragraph p{
+        width: 100%;
+        padding: 0px 20px;
+        font-size: 50px;
+    }
+    .footer-menu p{
+        font-size: 50px;
+    }
+    .redcolor p{
+        font-size: 60px;
+    }
+    .footer-menu1 .text-bold{
+        font-size: 60px;
+    }
+    .socialicons{
+        font-size: 70px;
+    }
+    .socialicon1{
+        font-size: 70px;
+    }
+    .list1{
+        margin: 50px;
+    }
+    .footer-menu-last p{
+        padding: 0px;
+    }
+    .list2{
+        display: flex;
+        flex-direction: column;
+        padding: 0px;
+
+    }
+    .list2 p{
+        font-size: 40px;
+    }
+
+    .Copyright-area .footer-menu-last .terms p{
+        font-size: 40px;
+        margin: 20px;
+    }
+    .Copyright-area .reserved{
+        padding-left: 0px;
+
+    }
+}
+/**************************************footer area**************************/
+
+@media only screen and (max-width: 640px) {
+    .schedule-demo{
+        width: 1349px;
+    }
+    .flex-container{
+        width: 1349px;
+    }
+    .empty-div{
+        width: 1349px;
+    }
+}
