--- a/css/menu.css
+++ b/css/menu.css
@@ -2,8 +2,8 @@
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5));
   background-size: 100%;
   height: 815px}
-.custom-container{
-  width: 1319px;
+.menu .custom-container{
+  width: 1349px!important;
   margin: 0 auto;
 }
 .menu {
@@ -28,13 +28,12 @@
   src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 .menu  .container-1-one {
-  display:flex;
-  justify-content: space-between;
+
   padding-top:18px;
 }
 .menu  .headerlogo {
-    padding-top: 27px;
-    padding-left: 55px;
+    padding-top: 25px;
+    padding-left: 69px;
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
@@ -42,8 +41,8 @@
 }
 
 .menu .headerlogo img{
-    width: 136px;
-    height: 57px;
+    width: 134px;
+    height: 58px;
 
 }
 .menu .logo {
@@ -108,7 +107,7 @@
     height: 239px;
 }
 .menu .left-list{
-    padding-left: 57px;
+    padding-left: 73px;
     padding-top: 40px;
 }
 .menu .left-list .give-margin{
@@ -161,14 +160,21 @@
     opacity: 0.6;
     border-radius: 6px;
     background-color: #333333;
-    padding-top: 0;
+    padding-top: 16px;
     padding-bottom: 22px;
-    margin-top: 15px;
-    margin-right: 13px;
+    margin-top: 8px;
+    margin-right: 12px;
     position: relative;
+    height: 223px;
+}
+.menu .aligning-with
+{
+    display: flex;
+    justify-content: flex-end;
 }
 .menu .icons-one{
-  padding-top: 15px;
+
+  padding-top: 0px;
 }
 
 .menu .caption-icons-1 {
@@ -262,15 +268,15 @@
 }
 .menu .container-computer{
   position: relative;
-  margin-top: 94px;
+  margin-top: 103px;
     display: flex;
 }
 
 .menu .computer-area{
-    width: 266px;
+    width: 254px;
     border-bottom: 1px solid #fff;
     position: relative;
-    left: -30px;
+    left: -5px;
 }
 .menu .container-computer .computer-area-text{
     display: flex;
@@ -278,7 +284,7 @@
     align-items: center;
     padding-top: 31px;
     width: 177px;
-    margin-left: -31px;
+    margin-left: -4px;
 }
 .menu .container-computer .computer-area-text p{
     color: #fff;
@@ -289,19 +295,20 @@
     opacity: 0.5;
 }
 .menu .computer-area img{
-    padding-left: 59px;
-    width: 231px;
-    height: 89px;
+    padding-left: 49px;
+    width: 224px;
+    height: 90px;
 }
 /* container 3 */
 .menu .container-3-one {
   display:flex;
-  justify-content: space-between;
+  justify-content:flex-start;
   padding-top: 49px;
 
 }
 .menu .container-3-one  .secondnav1{
-  padding-left:57px;
+  padding-left:73px;
+    padding-top: 1px;
 }
 .menu  .container-3-one  .secondnav1 a{
   opacity: 0.9;
