--- a/css/publicationarchive.css
+++ b/css/publicationarchive.css
@@ -2,19 +2,75 @@ body{
   font-family: AvenirNext!important;
 }
 /************************************************* header section start  ***********************************************/
-#hero {
+.hero-img{
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), linear-gradient(223deg, rgba(255, 255, 255, 0.5), rgba(0, 0, 0, 0.5)), url(../assets/doctor-w-dog.jpg) no-repeat;
   background-size: 100%;
-  height: 815px}
+  height: 833px;}
 
 .hero-row-1 {
   display: flex;
   flex-direction: row;
   justify-content: space-around; }
+@font-face {
+  font-family: AvenirNext;
+  src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
 
 
 /*menu start*/
-/*-----------------------------------------------------------------------------------------------------*/
+.custom-container{
+  width:1349px!important;
+  margin: 0 auto;
+}
+.header-area{
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-top:41px;
+}
+.hero-img .logo-container{
+  padding:0px;
+  margin:0px;
+
+}
+.hero-img .logo-one{
+  padding-left:39px;
+  padding-top: 2px;
+}
+.hero-img .logo-one ul{
+  list-style-type: none;
+  padding-left: 5px;
+  padding-top: 40px;
+  padding-bottom: 95px;
+}
+
+.hero-img .logo-one li a{
+  text-decoration: none;
+  opacity: 0.9;
+  font-size: 16px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2.15;
+  letter-spacing: 0.8px;
+  text-align: left;
+  color: #ffffff;
+  font-family: AvenirNext;
+}
+.hero-img .text-container{
+  padding:0px;
+}
+.hero-img .text-container h4{
+  opacity: 0.6;
+  font-family: AvenirNext;
+  font-size: 43px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 0.8;
+  letter-spacing: 41px;
+  color: #ffffff;
+  text-align: right;
+  margin-right: -6px;
+}
 
 .menumain .caption-icons-1 {
   position: absolute;
@@ -70,165 +126,80 @@ body{
 }
 .menumain{
   position: fixed;
-  right: 31px;
+  right: 30px;
   z-index: 1;
 }
-/*----------------------------------------------------------------------------------------------------------------*/
-/*Menu end*/
-
-.main-container{
-  width:1287px;
-  margin:auto;
-}
-@font-face {
-  font-family: AvenirNext;
-  src: url("../fonts/AvenirNextLTPro-Regular.otf"); }
-
-.container-1{
-  display:flex;
-  justify-content: space-between;
-  padding-top:45px;
-}
-.container-1:nth-child(1){
-  padding-left: 39px;
-}
-.headerlogo img{
-  width: 135px;
-  height: 56px;
-
-}
-.welcome-logo{
-  height: 72px;
-  opacity: 0.6;
-  font-size: 41px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 0.8;
-  letter-spacing: 43px;
-  text-align: left;
-  color: #ffffff;
-  margin-top: 8px;
-  font-family: AvenirNext;
-  padding-left: 45px;
-}
-.logo {
-  opacity: 0.6;
-  font-family: AvenirNext;
-  font-size: 43px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 0.8;
-  letter-spacing: 41px;
-  color: #ffffff;
-  padding-top: 8px;
-  margin-right: -7px;
-}
-
-/*   wellcome  & logo */
-.container-2{
-  display:flex;
-  justify-content: space-between;
-  padding-bottom: 95px;
-}
 .left-list-top{
-  padding-left: 41px;
-  padding-top: 40px;
+  margin-left: -1px;
 }
 
-.left-list-top a{
-  opacity: 0.9;
-  font-size: 16px;
-  font-weight: 600;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 2.15;
-  letter-spacing: 0.8px;
-  text-align: left;
-  color: #ffffff;
-  font-family: AvenirNext;
-}
-.left-list-top a:hover{
-  color: #ffffff;
-  cursor: pointer;
-  text-decoration:none;
-}
-.text-center{
+.text-center {
   width: 61.4px;
   opacity: 0.6;
   border-radius: 6px;
   background-color: #333333;
   padding-top: 15px;
   padding-bottom: 15px;
-  margin-top: 16px;
+  margin-top: 15px;
   margin-right: -3px;
 }
-.icons{
-  padding-top: 5px;
-}
-
-.magnifier a img{
+.magnifier a img {
   width: 21px;
   height: 22px;
   margin: 7px auto;
 }
-.person a img{
+.person a img {
   width: 21px;
   height: 22px;
   margin: 6px auto 6px 1px;
 }
-.chaticon a img{
+.chaticon a img {
   width: 33px;
   height: 25px;
   margin: 17px auto 7px auto;
 }
-.telephone a img{
+.telephone a img {
   width: 23px;
   height: 22px;
   margin: 7px auto;
 }
-.globe a img{
+.globe a img {
   width: 27px;
   height: 24px;
   margin: 7px auto 7px 2px;
 }
-.icons > div a img:nth-child(2){
-  width: 21px;
-  height: 22px;
+
+/****************************** computer div ****************************/
+.hero-img .computer-div{
+  padding-right: 0px;
+  padding-left: 0px;
+  width: 1300px;
+  margin-top: 41px;
 }
-.container-computer{
-  position: relative;
-  margin-top: 94px;
-}
-.computer-area{
+
+.hero-img .computer-img{
   width: 254px;
   border-bottom: 1px solid #fff;
-  position:relative;
-  left:-30px;
-
-
+  position: relative;
+  left: -30px;
+  margin-top: 57px;
+  top: -3px;
 }
-.computer-area img{
-  padding-left: 42px;
-  width: 220px;
+.hero-img .computer-img img{
+  padding-left: 49px;
+  width: 224px;
   height: 90px;
-
 }
-/* container 3 */
-.container-3{
-  display:flex;
-  justify-content: space-between;
-  padding-top: 49px;
-
+.hero-img .computer-div ul{
+  list-style-type: none;
+  padding-left: 48px;
+  padding-top: 6px;
 }
-.container-3 .secondnav1{
-  padding-left:42px;
-}
-.container-3 .secondnav1 a{
+.hero-img .computer-div li a{
+  text-decoration: none;
   opacity: 0.9;
   font-size: 16px;
-  font-family:  AvenirNext;
+  font-family: AvenirNext;
   font-weight: 500;
   font-style: normal;
   font-stretch: normal;
@@ -237,11 +208,10 @@ body{
   text-align: left;
   color: #9d9d9d;
 }
-.container-3 .secondnav1 a:hover{
-  text-decoration: none;
+.hero-img .computer-div li a:hover{
   color:#ffffff;
 }
-.secondnav1 .active .white-color{
+.hero-img .computer-div .color{
   color:#ffffff;
 }
 .play-logo {
@@ -283,16 +253,39 @@ body{
   height: 63px;
   padding-left: 6px;
 }
-.secondnav2{
+.logo-header-div{
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  height: 224px;
+}
+.logo-header-div .txt{
   font-family: AvenirNext;
   color: #9d9d9d;
   padding-top: 7px;
-}
-.secondnav2 p{
-  padding-right: 32px;
+  text-align: right;
+  padding-right:87px;
 }
 
-
+/*****************media queries for header ********************************/
+@media only screen and (max-width: 640px) {
+  .hero-img{
+    width:1314px;
+  }
+  .computer-div {
+    display:none;
+  }
+  .logo-header-div{
+    display: none;
+  }
+  .h-list{
+    display:none;
+  }
+  .text-container{
+    display:block;
+  }
+}
+/***************************header section*********************************/
 
 
 /*****************************************next section start three red div  ***********************************/
@@ -376,7 +369,7 @@ body{
 
 /* feature-publication */
 .main-area div.further-row{
-  width: 1275px;
+  width: 1270px;
 }
 .main-area > a:hover{
   text-decoration: none;
@@ -411,7 +404,7 @@ body{
 
 
 .feature-publication .upper-row .feature-header-text{
-  margin:63px 0px 0px 75px;
+  margin:63px 0px 0px 0px;
 
 }
 
@@ -440,11 +433,19 @@ body{
   width:242px;
   height:171px;
 }
- 
+.feature-publication .further-row  .image-div{
+  padding-left: 0px;
+  padding-right: 0px;
+  margin-right: 31px;
+}
 .feature-publication .further-row  .image-div img{
   opacity: 0.39;
   background-blend-mode: normal, color;
   background-image: linear-gradient(rgba(90, 103, 117, 0.6), rgba(90, 103, 117, 0.6)), linear-gradient(#5a6775, #5a6775); 
+}
+
+.feature-publication .further-row .col-one {
+  padding-left: 0px;
 }
 
 .feature-publication .further-row .col-one p:first-child{
@@ -465,6 +466,9 @@ body{
 .feature-publication .p-div{
   padding-left:21px;
   font-size:10px !important;
+}
+.feature-publication .further-row .col-two {
+  padding-left: 12px;
 }
 
 .feature-publication .further-row .col-one p:nth-child(2){
@@ -539,7 +543,7 @@ body{
   padding-left:13px;
 }
 .feature-publication .adjuct-text{
-  padding-left:30px;
+  padding-left:0px;
   padding-top:18px;
 }
 .feature-publication .adjuct-text .text {
@@ -571,9 +575,6 @@ font-size: 14px;
 .feature-publication .further-row .col-two .inside-col-two p i
 {
   font-size: 12px;  
-}
-.feature-publication .column{
-  padding-left:463px;
 }
 
 .feature-publication .digit-slider-icons p {
@@ -630,7 +631,9 @@ font-size: 14px;
 
   .feature-publication .column {
     display: flex;
-    flex-direction: row; }
+    flex-direction: row;
+    justify-content: center;
+  }
     .digit-slider-icons {
     
     color: #ADAFAD;
@@ -723,7 +726,11 @@ font-size: 14px;
   color: #54585a;
   }
 
-  
+.top-resource .header-text  {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
 .top-resource .header-text p {
     width: 538px;
     height: 38px;
@@ -737,20 +744,30 @@ font-size: 14px;
     text-align: left;
     color: #fc0606; 
 }
+
   .top-resource .row-two-links{
     margin-top:57px;
 
   }
 .top-resource .header-text p > span {
-    color: #54585a; }
+    color: #54585a;
+  padding-left: 30px;
+}
   
 .resource-header{
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-left:83px;
+
 
 }
+.resource-header p:nth-child(2){
+  padding-left: 30px;
+}
+.resource-header p:last-child{
+  padding-left: 30px;
+}
+
 .resource-align{
   display: flex;
   flex-direction: row;
@@ -759,10 +776,15 @@ font-size: 14px;
 .top-resource .label {
     display: flex;
     flex-direction: row; 
-    margin-left:90px;
-    margin-top:40px;
+    margin-left:82px;
+    height: 30px;
   }
+.top-resource .label div{
+  margin-right:5px;
+  margin-left: 5px;
+}
   .top-resource{
+
   }
 .top-resource .label-1 {
     width: 130px;
@@ -780,7 +802,9 @@ font-size: 14px;
     line-height: normal;
     letter-spacing: normal;
     text-align: left;
-    color: #54585a; }
+    color: #54585a;
+    margin-bottom: 0px;
+}
   
 .top-resource .label-2 p {
     font-family: AvenirNext;
@@ -791,8 +815,12 @@ font-size: 14px;
     line-height: 0.92;
     letter-spacing: normal;
     text-align: left;
-    color: #ffffff; }
-  
+    color: #ffffff;
+margin-bottom: 0px;
+}
+.top-resource .label-2 p span {
+  padding-left: 10px;
+}
 .top-resource .label-2 {
     width: 125px;
     opacity: 0.6;
@@ -806,7 +834,7 @@ font-size: 14px;
     background-color:  #f7f7f7;
   }
   .top-resource .label-3 {
-    width: 190px;
+    width: 166px;
     opacity: 0.6;
     background-color: #54585a;
     display: flex;
@@ -823,8 +851,12 @@ font-size: 14px;
     line-height: 0.92;
     letter-spacing: normal;
     text-align: left;
-    color: #ffffff; 
+    color: #ffffff;
+    margin-bottom: 0px;
   }
+.top-resource .label-3 p span{
+  padding-left: 8px;
+}
     .top-resource .label-4 {
       width: 130px;
       opacity: 0.6;
@@ -844,8 +876,12 @@ font-size: 14px;
       letter-spacing: normal;
       text-align: left;
       color: #ffffff; 
-
+      margin-bottom: 0px;
     }
+.top-resource .label-4 p span {
+  padding-left: 16px;
+
+}
   .top-resource .column-1 {
     width: 263px; 
     margin-left:175px;
@@ -1041,244 +1077,263 @@ font-size: 14px;
 
 
 
-/*****************************  footer   & subscribtion area **********************************/
-  /* subsribe start */
 
-.subscribe-container{
-    width: 1349px;
-    margin:0 auto;
+/*subscribe section*/
+.subscribe-section{
+  background-color: #ffffff;
 }
-.subscribing-area{
-    display: flex;
-    justify-content: flex-end;
-    width: 1349px;
-    margin:0 auto;
-
-}
-.sub{
-    width: 1215px;
-    height: 409px;
-    background-color: rgba(155, 155, 155, 0.06);
-    margin-top: 220px;
-    margin-bottom: 81px
-}
-/* subscribe */
-
-.Subscribe {
-    font-family: AvenirNext;
-    font-size: 32px;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.21;
-    letter-spacing: -0.2px;
-    text-align: left;
-    color: #5a6775;
-    padding-top: 51px;
-    padding-left: 40px;
+.subscribe-section .subcribe-text {
+  padding-left: 42px!important;
+  padding-top: 51px;
 }
 
-.Subscribe1 span{
-    width: 39px;
-    height: 21px;
-    font-family: AvenirNext;
-    font-size: 15px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.31;
-    letter-spacing: 0.2px;
-    text-align: left;
-    color: #5a6775;
-    padding-left: 8px;
+.subscribe-section .subcribe-text p{
+  font-family: AvenirNext;
+  font-size: 34px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.21;
+  letter-spacing: -0.4px;
+  text-align: left;
+  color: #5a6775;
 }
-.Subscribe1 .float-right{
-    width: 68px;
-    height: 22px;
-    font-family: AvenirNext;
-    font-size: 15px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.29;
-    letter-spacing: 0.1px;
-    text-align: left;
-    color: #5a6775;
+.subscribe-section .flexing-spans{
+  display: flex;
+  justify-content: space-between;
 }
-.Subscribe1 p{
-    display: block;
-    font-family: AvenirNext;
-    font-size: 12px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.58;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775;
-    padding-bottom: 20px;
-    padding-top: 16px;
+.subscribe-section .long-paragraph-p p{
+  font-family: AvenirNext;
+  font-size: 13px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.38;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5a6775;
+}
+.subscribe-section .long-paragraph-p p:last-child{
+  padding-top: 17px;
+}
+.subscribe-section .hr-line hr{
+  margin: 9px;
+  margin-bottom: 28px;
+  margin-right: 11px;
+}
+.subscribe-section .flexing-spans span{
+  font-family: AvenirNext;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.31;
+  letter-spacing: 0.2px;
+  text-align: left;
+  color: #5a6775;
+  padding-left: 10px;
+  padding-right: 7px;
+}
+.subscribe-section .position-end{
+  display: flex;
+  justify-content: flex-end;
+  width: 1334px;
+}
+.subscribe-section .row{
+  margin-right: 0px!important;
+  margin-left: 0px!important;
 }
 
-.second-subscribe {
-    width: 600px;
-    float: right;
-    padding-right: 146px;
-    padding-top: 4px;
-
-
+.subscribe-section .section-left{
+  width: 1216px;
+  background-color: #f7f7f7;
+  height: 430px;
+  margin-top: 107px;
 }
-.second-subscribe hr{
-    border: solid 1px #d1d1d6;
-    margin-top: 6px;
+/*subcribe section*/
+
+
+
+.foot-area-one{
+
+  background-color:rgb(249,249,249);
+  margin: 81px auto 0 auto;
 }
-
-/* subsribe end */
-/* footer area star */
-
-.footer-container{
-
-    background-color: rgb(239, 238, 238);
-
-}
-.foot-area{
-    width: 1349px;
-    background-color:rgb(239, 238, 238);
-    margin:0 auto;
+.main-container{
+  padding: 40px 100px;
 }
 .footer-area{
-    display: flex;
-    flex-direction: row;
-    width: 1200px;
-    height: auto;
-    padding-right: 50px;
-    margin:0 auto;
-    padding-bottom: 45px;
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  width: 1143px;
+  height: auto;
+  padding-right: 50px;
+  margin:0 auto;
+  padding-bottom: 45px;
 }
-.footer-area .list1{
-    padding: 36px 0px 0 144px;
-}
-.footer-area .list2{
-    padding: 36px 0px 0 24px;
-}
-.footer-area .list3{
-    padding: 36px 0px 0 50px;
-}
-.footer-area .list4{
-    padding: 36px 0px 0 28px;
-}
-.footer-area .list5{
-    padding: 31px 0px 0 21px;
-}
+
 .redcolor p{
-    font-weight: 600;
-    font-size: 12px;
-    letter-spacing: 0.5px;
+  font-weight: 600;
+  font-size: 12px;
+  letter-spacing: 0.5px;
 }
 .footer-area .list3 i{
-    padding: 53px 0px 0 10px;
-    width: 20px;
-    height: 16px;
+  padding: 53px 0px 0 10px;
+  width: 20px;
+  height: 16px;
 
 }
 
 .footer {
-    background-color: rgba(155, 155, 155, 0.06);
-    height: 100%; }
+  background-color: rgba(155, 155, 155, 0.06);
+  height: 100%; }
 
 .redcolor {
-    color: #fc0606;
-    padding-bottom: 20px
+  color: #fc0606;
+  padding-bottom: 20px
 }
 
 
 .footer-menu {
-    width: 150px;
-    height: 224px;
-    font-family: AvenirNext;
-    font-size: 12px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 2.15;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775;
+
 }
 .footer-menu p{
-    font-family: AvenirNext;
-    font-size: 12px;
-    margin-bottom: 2px;
+  font-family: AvenirNext;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2.15;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5a6775;
+  margin-bottom: 2px;
 }
 
 .footer-paragraph p{
-    width: 222px;
-    font-family: AvenirNext;
-    font-size: 13px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 2.15;
-    letter-spacing: normal;
-    text-align: left;
-    color: #5a6775;
+  width: 222px;
+  font-family: AvenirNext;
+  font-size: 13px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 2.15;
+  letter-spacing: normal;
+  text-align: left;
+  color: #5a6775;
 }
 .footer-menu1 .text-bold{
-    font-weight: bold;
-    color: #5A6775;
+  font-weight: bold;
+  color: #5A6775;
 }
 
 .footer-menu-last p {
-    font-family: AvenirNext;
-    font-size: 10px;
-    font-weight: 500;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: normal;
-    letter-spacing: 0.5px;
-    text-align: left;
-    color: #8e8e93;
-    padding-left: 15px;
-    padding-top: 3px;
+  font-family: AvenirNext;
+  font-size: 10px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: 0.5px;
+  text-align: left;
+  color: #8e8e93;
+  padding-left: 15px;
+  padding-top: 3px;
 }
 .Copyright-area{
-    margin-top: 50px;
+  margin-top: 50px;
 }
 .Copyright-area .footer-menu-last{
-    width: 1000px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin: auto;
-    padding-bottom: 125px;
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: auto;
+  padding-bottom: 125px;
 }
 .Copyright-area .footer-menu-last .terms{
-    display: flex;
+  display: flex;
 
 }
 .Copyright-area .reserved{
-    padding-left: 30px;
+  padding-left: 30px;
 
 }
 .Copyright-area .footer-menu-last .terms p{
-    font-size: 11px;
-    padding: 0 20px;
+  font-size: 11px;
+  padding: 0 20px;
 }
 .socialicons {
-    font-size: 25px;
-    margin-left: 20px;
-    color: #fc0606;
+  font-size: 22px;
+  margin-left: 20px;
+  color: #fc0606;
 }
 .socialicon1 {
-    font-size: 25px;
-    color: #fc0606;
+  font-size: 22px;
+  color: #fc0606;
+}
+.icon-list{
+  margin-right: 20px;
 }
 /* footer area end */
 
+@media only screen and (max-width: 640px){
+  .footer-area{
+    padding: 40px;
+  }
+  .foot-area{
+    height: auto;
+  }
+  .footer-area{
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .footer-area .list1{
+  }
+  .footer-paragraph p{
+    width: 100%;
+    padding: 0px 20px;
+    font-size: 50px;
+  }
+  .footer-menu p{
+    font-size: 50px;
+  }
+  .redcolor p{
+    font-size: 60px;
+  }
+  .footer-menu1 .text-bold{
+    font-size: 60px;
+  }
+  .socialicons{
+    font-size: 70px;
+  }
+  .socialicon1{
+    font-size: 70px;
+  }
+  .list1{
+    margin: 50px;
+  }
+  .footer-menu-last p{
+    padding: 0px;
+  }
+  .list2{
+    display: flex;
+    flex-direction: column;
+    padding: 0px;
 
+  }
+  .list2 p{
+    font-size: 40px;
+  }
 
+  .Copyright-area .footer-menu-last .terms p{
+    font-size: 40px;
+    margin: 20px;
+  }
+  .Copyright-area .reserved{
+    padding-left: 0px;
 
-
-
-
-
+  }
+}
+/**************************************footer area**************************/
